<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="7">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="7"
            android:layout_weight="1">
            <TextView
                android:id="@+id/tv_name_tag"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name_label"
                android:layout_weight="0"
                android:gravity="start"/>

            <TextView
                android:id="@+id/tv_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="3" />

            <TextView
                android:id="@+id/tv_class_tag"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/class_label"
                android:layout_weight="0"/>

            <TextView
                android:id="@+id/tv_class"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2" />

            <TextView
                android:id="@+id/tv_init_tag"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/init_label"
                android:layout_weight="0" />
            <TextView
                android:id="@+id/tv_init"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />
            <TextView
                android:id="@+id/tv_max_grit_tag"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/max_grit_label"
                android:layout_weight="0"/>
            <TextView
                android:id="@+id/tv_max_grit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="3"
            android:layout_weight="1">

            <TextView
                android:id="@+id/tv_agility_tag"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/agility_label"
                android:layout_weight="0" />

            <TextView
                android:id="@+id/tv_agility"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/tv_cunning_tag"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cunning_label"
                android:layout_weight="0" />

            <TextView
                android:id="@+id/tv_cunning"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>

            <TextView
                android:id="@+id/tv_spirit_tag"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/spirit_label"
                android:layout_weight="0" />

            <TextView
                android:id="@+id/tv_spirit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="3"
            android:layout_weight="1">
            <TextView
                android:id="@+id/tv_strength_tag"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/strength_label"
                android:layout_weight="0" />

            <TextView
                android:id="@+id/tv_strength"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/tv_lore_tag"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lore_label"
                android:layout_weight="0" />

            <TextView
                android:id="@+id/tv_lore"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/tv_luck_tag"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/luck_label"
                android:layout_weight="0" />

            <TextView
                android:id="@+id/tv_luck"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="3"
            android:layout_weight="1">

            <TextView
                android:id="@+id/tv_health_tag"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/health_label"
                android:layout_weight="0"/>

            <TextView
                android:id="@+id/tv_health"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/tv_defense_tag"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/defense_label"
                android:layout_weight="0" />

            <TextView
                android:id="@+id/tv_defense"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/tv_armor_tag"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/armor_label"
                android:layout_weight="0" />

            <TextView
                android:id="@+id/tv_armor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="3"
            android:layout_weight="1">
            <TextView
                android:id="@+id/tv_sanity_tag"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sanity_label"
                android:layout_weight="0" />

            <TextView
                android:id="@+id/tv_sanity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/tv_willpower_tag"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/willpower_label"
                android:layout_weight="0" />

            <TextView
                android:id="@+id/tv_willpower"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/tv_spiritarmor_tag"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sp_armor_label"
                android:layout_weight="0" />

            <TextView
                android:id="@+id/tv_sparmor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="6"
            android:layout_weight="1">
            <TextView
                android:id="@+id/tv_ranged_tag"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ranged_to_hit_label"
                android:layout_weight="0" />

            <TextView
                android:id="@+id/tv_ranged"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="0">
                <TextView
                    android:id="@+id/tv_shots1_tag"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/shots_label"
                    android:layout_weight="0" />

                <TextView
                    android:id="@+id/tv_damage1_tag"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/damage_label"
                    android:layout_weight="0" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/tv_shots1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <TextView
                    android:id="@+id/tv_damage1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="0">
                <TextView
                    android:id="@+id/tv_shots2_tag"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/shots_label"
                    android:layout_weight="0" />

                <TextView
                    android:id="@+id/tv_damage2_tag"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/damage_label"
                    android:layout_weight="0" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/tv_shots2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <TextView
                    android:id="@+id/tv_damage2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />
            </LinearLayout>


        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="4"
            android:layout_weight="1">
            <TextView
                android:id="@+id/tv_melee_tag"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/melee_to_hit_label"
                android:layout_weight="0" />

            <TextView
                android:id="@+id/tv_melee"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/tv_combat_tag"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/combat_label"
                android:layout_weight="0" />

            <TextView
                android:id="@+id/tv_combat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tv_melee_damage_tag"
                android:text="@string/damage_label"
                android:layout_weight="0"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tv_melee_damage"
                android:layout_weight="1"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="6"
            android:layout_weight="1">
            <Button
                android:id="@+id/btn_equip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/equip_label"
                android:layout_weight="1" />

            <Button
                android:id="@+id/btn_weapons"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/weapons_label"
                android:layout_weight="1" />

            <Button
                android:id="@+id/btn_items"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/items_label"
                android:layout_weight="1" />

            <Button
                android:id="@+id/btn_sidebag"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/side_bag_label"
                android:layout_weight="1" />

            <Button
                android:id="@+id/btn_effects"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/conditions_label"
                android:layout_weight="1" />

            <Button
                android:id="@+id/btn_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/back_label"
                android:layout_weight="1" />
        </LinearLayout>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>